# gdphelper

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_13100347.csv
.github/workflows/: ci-cd.yml
docs/: Data Sources.xlsx  Makefile  conf.py  data_sources.csv  example.ipynb  make.bat
src/eda-helper/: __init__.py  descriptive_summary.py  download_zip.py  function_04.py  line_plot.py
src/gdphelper/: __init__.py  gdpcleaner.py  gdpdescribe.py  gdpimporter.py  gdpplotter.py
tests/: test_ gdphelper.py  test_ gdpplotter.py  test_13100347.csv  test_eda-helper.py  test_gdpcleaner.py  test_gdpdescribe.py  test_gdpimporter.py  test_gdpplotter.py  test_gov_ca_gdp_helper.py  test_integration.py
