[tool.poetry]
name = "gov_ca_gdp_helper"
version = "0.0.1"
description = "A package for streamlining EDA processes for basic Data Analysis"
authors = ["Aldo Barros, Gabriel Fairbrother, Ramiro Mejia, Wanying Ye"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
