[tool.poetry]
name = "gdphelper"
version = "0.0.1"
description = "A package for streamlining EDA processes for basic Data Analysis"
authors = ["Aldo Barros, Gabriel Fairbrother, Ramiro Mejia, Wanying Ye"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
numpy = "^1.22.1"
pytest = "^6.2.5"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
